feat: Integrate CallKaro outbound calling with Supabase backend
Implemented manual call initiation system allowing users to trigger outbound
calls via CallKaro API with full database tracking and state management.

## Backend Infrastructure

### Database Schema (Supabase)
- Created `users` table with phone numbers, names, timezone, and call windows
- Created `calls` table tracking call lifecycle (queued → ringing → in_progress → completed/failed)
- Added indexes for performance (user_status, full-text search on transcripts, created_at)
- Implemented Row Level Security (RLS) policies for user data access
- Created helper function `get_users_needing_call_today()` for scheduling logic
- Set up `audio` storage bucket for future call recordings
- Fixed RLS policy syntax (PostgreSQL doesn't support CREATE POLICY IF NOT EXISTS)

### Supabase Client Setup
- `lib/supabase/client.ts` - Browser client using @supabase/ssr
- `lib/supabase/server.ts` - Server client with service role key for API routes

### Dependencies
- Installed `@supabase/supabase-js` for database and auth
- Installed `@supabase/ssr` for Next.js 14 App Router integration

## API Integration

### CallKaro Outbound Call Endpoint
- Created `app/api/calls/initiate/route.ts` API route
- Fixed endpoint URL: `/call/outbound` (per CallKaro docs)
- Fixed authentication: `X-API-KEY` header instead of Bearer token
- Fixed request payload: `to_number` and `agent_id` fields
- Creates database record with status='queued' before API call
- Updates record with `vendor_call_id` after successful initiation
- Handles errors gracefully with database status updates
- Returns detailed success/error responses to frontend

### Call Flow
1. User clicks "Call now" → POST to `/api/calls/initiate`
2. Fetch user from database (or use first user as fallback)
3. Insert call record with status='queued', scheduled_at=now()
4. POST to CallKaro `/call/outbound` with to_number, agent_id, metadata
5. Update call record with vendor_call_id and st

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ yarn-error.log*
 # OS
 .DS_Store
 Thumbs.db
+
+# ideation and rough work
+temp
+
+# Supabase
+supabase/.temp/
+supabase/.branches/
