--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-three/drei": "9.109.0",
     "@react-three/fiber": "8.15.16",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.75.1",
     "autoprefixer": "10.4.20",
     "framer-motion": "11.2.13",
     "lucide-react": "0.453.0",
@@ -22,6 +24,7 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
-    "@types/node": "24.8.1"
+    "@types/node": "24.8.1",
+    "supabase": "^2.51.0"
   }
 }
