--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@react-three/drei": "9.109.0",
     "@react-three/fiber": "8.15.16",
     "@supabase/ssr": "^0.7.0",
@@ -19,9 +20,11 @@
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.65.0",
     "tailwindcss": "3.4.13",
     "three": "0.160.0",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "24.8.1",
